--- a/project/project1.html
+++ b/project/project1.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaya Kumar</title>
+    <title>Web page</title>
     <link rel="stylesheet" href="/project/project1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/http://www.w3schools.com/lib/w3.css">
 </head>
 
 <body>
@@ -17,18 +18,23 @@
         </div>
         <nav class="first">
             <ul>
-                <li><img src="/Home.png" alt="shipment_icon" /><a href="#">Dashboard</a></li>
-                <li><img src="/Shipment_Mgmt.png" alt="shipment_icon" /><a href="#">shipment</a></li>
-                <li><img src="/file 1.png" alt="shipment_icon" /><a href="#">Report</a></li>
-                <li><img src="/settings 1.png" alt="shipment_icon" /><a href="#">Control Tower</a></li>
-                <li><img src="/Shipment_Mgmt.png" alt="shipment_icon" /><a href="#"><span class="end">Action
-                            panel</span></a></li>
+                <a href="#"><li ><img  src="/Home.png" alt="shipment_icon" /><div>Dashboard</div></li></a>
+                <a href="#"><li><img  src="/Shipment_Mgmt.png" alt="shipment_icon" /><div>shipment</div></li></a>
+                <a href="#"><li><img  src="/file 1.png" alt="shipment_icon" /><div>Report</div></li></a>
+                <a href="#"><li><img  src="/settings 1.png" alt="shipment_icon" /><div>Control Tower</div></li></a>
+                <a href="#"><li><img  src="/Shipment_Mgmt.png" alt="shipment_icon" /><div>Action panel</div></li></a>
             </ul>
         </nav>
+
         <div class="profile">
-            Hariprasanth
-            <i class="fa fa-user-circle-o" style="font-size:25px"></i>
+            <div><img src="/Shipment_Mgmt.png"></div>
+            <div><img src="/Shipment_Mgmt.png"></div>
+            <div class="login"> 
+                <div>Hariprasanth</div>
+                <div><i class="fa fa-user-circle-o" style="font-size:25px"></i></div>
+            </div>
         </div>
+
     </header>
 
     <div class="stat-container">
@@ -57,14 +63,12 @@
                 <p>Delivered in full</p>
                 <span class="number-detail">97%</span>
             </div>
-            <div class="container-img"><img src="/las.png"></div>
+            <div class="container-img"><img src="/4.png"></div>
         </div>
 
         <div class="container-itemlast">
-            <div class="container-last1">
-                <div>Inbound Freight as % of COGS</div>
-                <div><img class="track-logo" src="/4.png"></div>
-            </div>
+            <div class="cogs">
+                 <div>Inbound Freight as % of COGS</div>
             <div class="main-position">
                 <div>
                     <p>Frozen</p>
@@ -89,20 +93,23 @@
                     <div class="circle-4"></div>
                     10%
                 </div>
-                <div class="container-img">
-                </div>
-            </div>
 
+            </div>
         </div>
-    </div>
-    <div class="second">
+            <div class="las"><img src="/las.png"></div>
+        </div>
+      </div>
+      </div>
+
+    <div class="third-container">
         <aside>
             <div class="aside">
-                <table>
-                    <tr>
-                        <th class="Risk">Risk Analy<img class="righ" src="/Group 33767.png"></th>
-                    </tr>
-                </table>
+                <div class="aside-header">
+
+                    <div class="Risk">Risk Analysis</div>
+                    <div><img src="/Group 33767.png"></div>
+                </div>
+                <hr>
                 <h1>UST Onmi Service</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium laborum aliquam sit dignissimos
                     quasi
@@ -115,50 +122,42 @@
                     corporis magnam eveniet odit quibusdam. Facilis culpa temporibus voluptatum maiores voluptates
                     similique veniam deserunt velit quis beatae, accusantium nostrum commodi ipsam iusto! Maxime, nihil
                     voluptate animi vitae consequuntur quisquam quae eius, atque minima in doloremque. Consequuntur,
-                    qui! Assumenda temporibus odio voluptatum nemo ad hic nostrum officiis voluptatibus architecto
-                    explicabo! Repellendus veritatis amet magni veniam ab eaque quibusdam totam nam dignissimos commodi
-                    accusamus exercitationem tenetur reiciendis similique corporis dolor, neque delectus consequuntur
-                    necessitatibus perferendis corrupti pariatur?
+                    qui! Assumenda temporibus odio
                 </p>
             </div>
         </aside>
-
-        <nav class="second-2">
-            <ul>
-                <li><a href="#">Inbound</a></li>
+        
+        <div class="second-nav">
+                <div class="Inbound"><li><a href="#">Inbound</a></li>
                 <li><a href="#">Outbound</a></li>
-                <li><a href="#">Watchlist</a></li>
-                <!-- <li class="view"><a href="#">View all shipments<img src="/Group 33759.png"></a></li> -->
-                <div class="view">
-                    <li class="view"><a href="#">View all shipments<img src="/Group 33759.png"></a></li>
-                </div>
-            </ul>
-        </nav>
+                <li><a href="#">Watchlist</a></li></div>
+                <li class="view"><a>View all shipments<img src="/Group 33759.png"></a></li> 
+        </div>
 
         <hr>
-        <div class="second-nav">
-            <nav>
-                <ul>
-                    <li><a href="#">All<span class="num">(25)</span></a></li>
-                    <li><a href="#">Delayed<span class="num">(10)</span></a></li>
-                    <li><a href="#">Early<span class="num">(6)</span></a></li>
-                    <li><a href="#"> Rescheduled<span class="num">(2)</span></a></li>
-                    <li><a href="#">Under Review<span class="num">(7)</span></a></li>
-                    <li><a href="#">On Time<span class="num">(7)</span></a></li>
-                </ul>
-            </nav>
+        <div class="third-nav">
+            <ul>
+                <li><a href="#">All<b>(25)</b></a></li>
+                <li><a href="#">Delayed<b>(10)</b></a></li>
+                <li><a href="#">Early<b>(6)</b></a></li>
+                <li><a href="#"> Rescheduled<b>(2)</b></a></li>
+                <li><a href="#">Under Review<b>(7)</b></a></li>
+                <li><a href="#">On Time<b>(7)</b></a></li>
+            </ul>
         </div>
         <br>
         <div class="form">
             <button class="search"><img src="/Group 33795.png"></button>
-            <input class="inp"  placeholder="Search by: Shipment ID, Origin, Destination, Product category, ventor">
+            <input class="search-box"
+                placeholder="Search by: Shipment ID, Origin, Destination, Product category, ventor">
         </div>
 
     </div>
     <br>
     </div>
     <div class="scroll">
-        <div class="scroll-down">
+        <!-- <div class="scroll-down"> -->
+            
             <div class="main-content">
                 <div class="content">
                     <div class="one">
@@ -169,27 +168,36 @@
                         <div class="right">
                             <img src="/www.png">
                             <img src="/track.png">
-                            <p>OnTime</p>
+                            <div class="OnTime">
+                                <p><b>Ontime</b></p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="two">
-                        <div class="left">
-                            <img src="/Vector.png">
-                            <span class="orgin">Origin</span>
-                            <span class="sikkim">Sikkim,IN</span>
+                        <div class="left-content">
+                            <div class="top-arrow"><img src="/Vector.png"></div>
+                            <div><span class="orgin">Origin<br></span>
+                                <span class="sikkim">Sikkim,IN</span>
+                            </div>
+                        </div>
+                        <div class="right-content">
+                            <div class="down-arrow"><img src="/down.png"></div>
+                            <div><span class="orgin">Destinination<br></span>
+                                <span class="sikkim">Seatle,USA</span>
+                            </div>
                         </div>
                     </div>
 
                     <div class="third">
                         <div class="third-left">
-                            <p>PO#<br>661234<br><br>
-                            <p>Vendor<br>Bailey</p>
+                            <p class="mini-style">PO#</p><p class="mini-style2">661234</p><br>
+                            <p class="mini-style">Vendor<p class="mini-style2">Bailey</p>
                         </div>
 
                         <div class="third-right">
-                            <p>Planned ETA<br>an 27, 2021 03:42 PM EST</p><br>
-                            <p>Current ETA<br>Jan 31, 2021 10:17 PM EST</p>
+                            <p class="mini-style">Planned ETA</p><p class="">Jan 27, 2021 03:42 PM EST</p><br>
+                            <p class="mini-style">Current ETA</p><p>Jan 31, 2021 10:17 PM EST</p>
                         </div>
                     </div>
 
@@ -207,31 +215,41 @@
                     <div class="one">
                         <div class="left">
                             <p>Shipment ID</p>
-                            <span class="left-num">109669449</span>
+                            <span class="left-num">109669412</span>
                         </div>
                         <div class="right">
                             <img src="/www.png">
-                            <img src="/track.png">
-                            <p>OnTime</p>
+                            <img src="/flight.png">
+                            <div class="OnTime">
+                                <p><b>Ontime</b></p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="two">
-                        <div class="left">
-                            <img src="/Vector.png">
-                            <span class="orgin">Origin</span>
-                            <span class="sikkim">Sikkim,IN</span>
+                        <div class="left-content">
+                            <div class="top-arrow"><img src="/Vector.png"></div>
+                            <div><span class="orgin">Origin<br></span>
+                                <span class="sikkim">Spain,IE</span>
+                            </div>
+                        </div>
+                        <div class="right-content">
+                            <div class="down-arrow"><img src="/down.png"></div>
+                            <div><span class="orgin">Destinination<br></span>
+                                <span class="sikkim">Seatle,USA</span>
+                            </div>
                         </div>
                     </div>
+
                     <div class="third">
                         <div class="third-left">
-                            <p>PO#<br>661234<br><br>
-                            <p>Vendor<br>Bailey</p>
+                            <p class="mini-style">PO#</p><p>661234</p><br>
+                            <p class="mini-style">Vendor<p>Bailey</p>
                         </div>
 
                         <div class="third-right">
-                            <p>Planned ETA<br>an 27, 2021 03:42 PM EST</p><br>
-                            <p>Current ETA<br>Jan 31, 2021 10:17 PM EST</p>
+                            <p class="mini-style">Planned ETA</p><p>Jan 27, 2021 03:42 PM EST</p><br>
+                            <p class="mini-style">Current ETA</p><p>Jan 31, 2021 10:17 PM EST</p>
                         </div>
                     </div>
 
@@ -249,33 +267,47 @@
                     <div class="one">
                         <div class="left">
                             <p>Shipment ID</p>
-                            <span class="left-num">109669449</span>
+                            <span class="left-num">109669432</span>
                         </div>
                         <div class="right">
                             <img src="/www.png">
-                            <img src="/track.png">
-                            <p>OnTime</p>
+                            <img src="/flight.png">
+                            <div class="OnTime">
+                                <p><b>Delayed</b></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="waiting">
+                        <div>Awaiting Tracking Info</div>
+                        <div>4hrs delayed</div>
+                    </div>
+                    <div class="two">
+                        <div class="left-content">
+                            <div class="top-arrow"><img src="/Vector.png"></div>
+                            <div><span class="orgin">Origin<br></span>
+                                <span class="sikkim">Dublin,IR</span>
+                            </div>
+                        </div>
+                        <div class="right-content">
+                            <div class="down-arrow"><img src="/down.png"></div>
+                            <div><span class="orgin">Destinination<br></span>
+                                <span class="sikkim">Seatle,USA</span>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="two">
-                        <div class="left">
-                            <img src="/Vector.png">
-                            <span class="orgin">Origin</span>
-                            <span class="sikkim">Sikkim,IN</span>
-                        </div>
-                    </div>
                     <div class="third">
                         <div class="third-left">
-                            <p>PO#<br>661234<br><br>
-                            <p>Vendor<br>Bailey</p>
+                            <p class="mini-style">PO#</p><p>661234</p><br>
+                            <p class="mini-style">Vendor<p>Bailey</p>
                         </div>
 
                         <div class="third-right">
-                            <p>Planned ETA<br>an 27, 2021 03:42 PM EST</p><br>
-                            <p>Current ETA<br>Jan 31, 2021 10:17 PM EST</p>
+                            <p class="mini-style">Planned ETA</p><p>Jan 27, 2021 03:42 PM EST</p><br>
+                            <p class="mini-style">Current ETA</p><p>Jan 31, 2021 10:17 PM EST</p>
                         </div>
                     </div>
+
                     <div class="four">
                         <div><img src="/fire.png"></div>
                         <div><img src="/tr.png"></div>
@@ -290,31 +322,41 @@
                     <div class="one">
                         <div class="left">
                             <p>Shipment ID</p>
-                            <span class="left-num">109669449</span>
+                            <span class="left-num">109669412</span>
                         </div>
                         <div class="right">
                             <img src="/www.png">
-                            <img src="/track.png">
-                            <p>OnTime</p>
+                            <img src="/ship.png">
+                            <div class="OnTime">
+                                <p><b>Rescheduled</b></p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="two">
-                        <div class="left">
-                            <img src="/Vector.png">
-                            <span class="orgin">Origin</span>
-                            <span class="sikkim">Sikkim,IN</span>
+                        <div class="left-content">
+                            <div class="top-arrow"><img src="/Vector.png"></div>
+                            <div><span class="orgin">Origin<br></span>
+                                <span class="sikkim">Limoges,FR</span>
+                            </div>
+                        </div>
+                        <div class="right-content">
+                            <div class="down-arrow"><img src="/down.png"></div>
+                            <div><span class="orgin">Destinination<br></span>
+                                <span class="sikkim">Seatle,USA</span>
+                            </div>
                         </div>
                     </div>
+
                     <div class="third">
                         <div class="third-left">
-                            <p>PO#<br>661234<br><br>
-                            <p>Vendor<br>Bailey</p>
+                            <p class="mini-style">PO#</p><p>661234</p><br>
+                            <p class="mini-style">Vendor<p>Bailey</p>
                         </div>
 
                         <div class="third-right">
-                            <p>Planned ETA<br>an 27, 2021 03:42 PM EST</p><br>
-                            <p>Current ETA<br>Jan 31, 2021 10:17 PM EST</p>
+                            <p class="mini-style">Planned ETA</p><p>Jan 27, 2021 03:42 PM EST</p><br>
+                            <p class="mini-style">Current ETA</p><p>Jan 31, 2021 10:17 PM EST</p>
                         </div>
                     </div>
                     <div class="four">
@@ -330,4 +372,5 @@
         </div>
     </div>
 </body>
+
 </html>
